--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -6,29 +6,31 @@
           <div class="card-group">
             <div class="card p-4">
               <div class="card-body">
-                <form>
+                <form #loginForm="ngForm" (ngSubmit)="LoginClicked()">
                   <h1>Login</h1>
                   <p class="text-muted">Sign In to your account</p>
-                  <p>Email Address and Password do not match!</p>
-                  <p>To reset a password please provide a valid email!</p>
+                  <p *ngIf="invalidLogin" class="alert alert-danger"> Incorrect Email or Password!</p>
+                  <p *ngIf="noEmailReset"class="alert alert-danger" >To Reset A Password, Please Provide A Valid Email!</p>
+                  <p *ngIf="noEmail" class="alert alert-danger">A Valid Email Address Is Required</p>
+                  <p *ngIf="resetSuccess" class="alert alert-success">An Email has been sent to enable you to reset your password</p>
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-user"></i></span>
                     </div>
-                    <input type="text" class="form-control" placeholder="Email Address" autocomplete="username" required>
+                    <input border-color="red" name="emailAddress" type="text" class="form-control" placeholder="Email Address" autocomplete="username" [(ngModel)]="emailAddress" required>
                   </div>
                   <div class="input-group mb-4">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-lock"></i></span>
                     </div>
-                    <input type="password" class="form-control" placeholder="Password" autocomplete="current-password" required>
+                    <input name="password" type="password" class="form-control" placeholder="Password" autocomplete="current-password" [(ngModel)]="password" required>
                   </div>
                   <div class="row">
                     <div class="col-6">
-                      <button type="button" class="btn btn-primary px-4" (click)="LoginClicked()">Login</button>
+                      <button type="submit" class="btn btn-primary px-4" [disabled]="!loginForm.form.valid || loading">Login</button>
                     </div>
                     <div class="col-6 text-right">
-                      <button type="button" class="btn btn-link px-0" (click)="ForgotClicked()">Forgot password?</button>
+                      <button type="button" class="btn btn-link px-0" [disabled]="loading" (click)="ForgotClicked()">Forgot password?</button>
                     </div>
                   </div>
                 </form>
@@ -39,7 +41,7 @@
                 <div>
                   <h2>Sign up</h2>
                   <p>If you do not already have access click here to request access from the system administrator.</p>
-                  <button type="button" class="btn btn-primary active mt-3" (click)="RequestClicked()">Request Access!</button>
+                  <button type="button" class="btn btn-primary active mt-3" (click)="RequestClicked()" [disabled]="loading">Request Access!</button>
                 </div>
               </div>
             </div>
